--- a/views/product.html
+++ b/views/product.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li><a href="/">Shop</a></li>
-                <li><a href="/admin/product">Add Product</a></li>
+                <li><a href="/admin/product-page">Add Product</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <form action="/add-product" method="POST">
+        <form action="/admin/product" method="POST">
             <input type="text" name="title">
             <button type="submit">Add Product</button>
         </form>
