--- a/views/shop.html
+++ b/views/shop.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="/">Shop</a></li>
-                <li><a href="/admin/product">Add Product</a></li>
+                <li><a href="/admin/product-page">Add Product</a></li>
             </ul>
         </nav>
     </header>
