Nouvelle version du shop

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,8 @@
-<%-include('includes/head.ejs')%>
+<%- include('includes/head.ejs') %>
 </head>
+
 <body>
-    <h1><%= pageTitle %></h1>
-    <h2>Cette page a été généré dans un vrai fichier html :)</h2>
-</body>
-</html>
+    <%- include('includes/navigation.ejs') %>
+    <h1>Page Not Found!</h1>
+
+<%- include('includes/end.ejs') %>
