--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -6,7 +6,7 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
-                <% if (prods.length > 0) { %>
+                <% if (prods.length> 0) { %>
                     <div class="grid">
                         <% for (let product of prods) { %>
                             <article class="card product-item">
@@ -28,9 +28,9 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product.id %>" class="btn">Details</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
-                                    </form>
+                                    <%- include('../includes/add-to-cart.ejs', {product: product}), {
+                                        product: product
+                                    } %>
                                 </div>
                             </article>
                             <% } %>
