--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,23 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <%- include('../includes/end.ejs') %>
+            <main>
+                <% if(products.length> 0) {%>
+                    <ul>
+                        <% products.forEach(product=>{%>
+                            <li>
+                                <p>
+                                    <%= product.productData.title %> (<%=product.quantity%>)
+                                </p>
+                                <form action="/cart-delete-item" method="post">
+                                    <button type="submit" class="btn">Delete</button>
+                                    <input type="hidden" name="productId" value="<%=product.productData.id%>">
+                                </form>
+                            </li>
+                            <%})%>
+                    </ul>
+                    <%}else{%>
+                        <h1>No product added!</h1>
+                        <%}%>
+            </main>
+            <%- include('../includes/end.ejs') %>
