--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,23 +3,21 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-            <main>
-                <% if(products.length> 0) {%>
-                    <ul>
-                        <% products.forEach(product=>{%>
-                            <li>
-                                <p>
-                                    <%= product.productData.title %> (<%=product.quantity%>)
-                                </p>
-                                <form action="/cart-delete-item" method="post">
-                                    <button type="submit" class="btn">Delete</button>
-                                    <input type="hidden" name="productId" value="<%=product.productData.id%>">
-                                </form>
-                            </li>
-                            <%})%>
-                    </ul>
-                    <%}else{%>
-                        <h1>No product added!</h1>
-                        <%}%>
-            </main>
-            <%- include('../includes/end.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul>
+                    <% products.forEach(p => { %>
+                        <li>
+                            <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                            <form action="/cart-delete-item" method="POST">
+                                <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
+        </main>
+        <%- include('../includes/end.ejs') %>
